examples/test/testpolicy10508.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10508
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key4: value31
      key42: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value18
          key49: value3
      podSelector:
        matchLabels:
          key40: value45
          key24: value14
          key21: value18
